[Diseño] Agreando icono

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ body {
     box-sizing: border-box;
     background-color: var(--dark);
     font-family: var(--font);
-    background-image: url(./assets/patita.png);
+    background-image: url(https://tinypic.host/images/2023/04/09/gatito.png);
     background-size: 50px;
     background-position: center center 100px;
 }
